~~~~~~~~~~~~~~
ztv Change Log
~~~~~~~~~~~~~~

--------------------
0.2.3-3   2016-06-10
--------------------

- implemented cursor readout in plot_panel

--------------------
0.2.3-2   2016-05-31
--------------------

- added viridis colormap
- couple of API bug fixes (thanks samverstocken!)

--------------------
0.2.3-1   2016-03-20
--------------------

- fixed bug that wx timestamps were sometimes large negative unchanging integers, which killed click-and-drag zooming

------------------
0.2.3   2016-03-18
------------------

- release with accumulated bug fixes etc.

----------------------
0.2.3dev5   2016-03-11
----------------------

- upgraded min/max/robust-stat calcs to better ignore NaN/Inf in displayed images & stats-box/photometry calculations
- changed colors of curview_rectangle in OverviewImagePanel and zoom_rect in PrimaryImagePanel to match and be orange, which in tests looks better than the old dark green (overview) and magenta (primary) and makes more sense to have be matching
- reduced initial delay in CommandListenerThread to 10 seconds (had been 1 minute) to reduce potential confusion about zombie ztv windows
- fixed a matplotlib warning bug annoyance - problem was __about__.py imports one routine from astropy_helpers, but astropy_helpers has some (unrelated/unnecessary for our purposes) matplotlib code.  Fix was to include the astropy_helpers.git_helpers code directly within ztv, to avoid both the annoyance warnings, but also blocking pylab.show() from working correctly at times in the underlying python session.
- re-factored phot_panel, plot_panel, stats_panel almost entirely out of ztv.py main module for clarity/maintainability reasons.  (ztv main module still has few hooks into stats_panel regarding doing auto clim setting from stats box, but that seems acceptable at this stage)
- fixed recently introduced bug that was causing accelerator key strokes to fail in primary_image_panel

--------------------
0.2.2-1   2016-03-08