@@ -16,7 +16,7 @@ __uri__ = "https://github.com/henryroe/ztv"
 # VERSION should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
 # pre-release of a version is, e.g. 0.2.1dev1  (0.2.1 is *newer* than 0.2.1dev1)
 # post-release of a version is, e.g. 0.2.1-1  (0.2.1 is *older* than 0.2.1-1)
-__version__ = "0.2.3-2"
+__version__ = "0.2.3-3"
 
 # Indicates if this version is a release version
 RELEASE = 'dev' not in __version__
